--- a/LimChaeSeung/GoHttpStudy/public/create_post.html
+++ b/LimChaeSeung/GoHttpStudy/public/create_post.html
@@ -1,10 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+	<meta charset="UTF-8">
+	<title>Juggle</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+	      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+	        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+	        crossorigin="anonymous"></script>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"
+	      type="text/css"/>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/codemirror.min.css">
+	<link href="https://cdn.jsdelivr.net/npm/froala-editor@2.9.6/css/froala_editor.pkgd.min.css" rel="stylesheet"
+	      type="text/css"/>
+	<link href="https://cdn.jsdelivr.net/npm/froala-editor@2.9.6/css/froala_style.min.css" rel="stylesheet"
+	      type="text/css"/>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script type="text/javascript"
+	        src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/codemirror.min.js"></script>
+	<script type="text/javascript"
+	        src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.25.0/mode/xml/xml.min.js"></script>
+	<script type="text/javascript"
+	        src="https://cdn.jsdelivr.net/npm/froala-editor@2.9.6/js/froala_editor.pkgd.min.js"></script>
 </head>
 <body>
-$END$
+<div class="container">
+	<div class="py-5 text-center">
+		<h2>글 쓰기</h2>
+	</div>
+
+	<div class="container">
+		<div class="d-flex justify-content-end">
+			<a href="home.html" class="btn btn-secondary">돌아가기</a>
+		</div>
+		<form action="./api/writePost" method="post">
+			<div class="form-floating mt-4">
+				<input type="text" class="form-control" id="title" placeholder="title" autocomplete="off" name="title">
+				<label for="title">제목</label>
+			</div>
+
+			<h3 class="mt-4 mb-4">내용</h3>
+			<label style="width: 100%">
+				<textarea class="form-control" name="details"></textarea>
+			</label>
+			<div class="mt-4 mb-4 d-flex justify-content-between">
+				<button type="submit" class="btn btn-primary">등록하기</button>
+			</div>
+		</form>
+	</div>
+
+	<div class="panel-footer">
+		<div class="row">
+			<div class="col-xs-6 col-md-6">
+			</div>
+		</div>
+	</div>
+</div>
+<script>
+	$(function () {
+		$('textarea').froalaEditor({heightMin: 400})
+	});
+</script>
 </body>
 </html>
