--- a/LimChaeSeung/GoHttpStudy/public/home.html
+++ b/LimChaeSeung/GoHttpStudy/public/home.html
@@ -1,10 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+	<meta charset="UTF-8">
+	<title>Juggle</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+	      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+	        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+	        crossorigin="anonymous"></script>
 </head>
-<body>
+<body onload="loadOn()">
+<div class="container">
+	<div class="py-5 text-center">
+		<h2>정글 페이지에요.</h2>
+		<p class="lead">안녕하세요. 정글입니다. 당신의 커피타임을 다른 사람을 위해서 파는것은 어떠신가요?</p>
+	</div>
+	<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+		<div class="carousel-indicators">
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+			        aria-current="true" aria-label="Slide 1"></button>
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+			        aria-label="Slide 2"></button>
+			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+			        aria-label="Slide 3"></button>
+		</div>
+		<div class="p-5 mt-4 mb-4 bg-light rounded-3">
+			<div class="container-fluid py-5">
+				<h1 class="display-5 fw-bold">정글 게시판입니다.</h1>
+				<table class="table table-hover">
+					<thead>
+					<tr>
+						<th>#</th>
+						<th>제목</th>
+						<th>등록시간</th>
+					</tr>
+					</thead>
+					<tbody>
+					</tbody>
+				</table>
+				<div class="d-flex justify-content-end">
+					<a href="create_post.html" class="btn btn-outline-primary me-2">글 쓰기</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<script>
+	document.querySelectorAll('tr').forEach(element => {
+		element.addEventListener('click', function (e) {
+			location.href = element.id;
+		});
+	});
 
+	function loadOn() {
+		fetch('127.0.0.1:3000/api/getPosts', {method: "GET"})
+				.then(res => res.json)
+				.then(data => {
+					const tbody = document.getElementsByTagName('tbody')[0]
+					data.forEach((d, i) => {
+						let tableString = `<tr id="read_post.html?id=${d.web_board_id}"><td>${i + 1}</td><td>${d.web_board_title}</td><td>${d.date_time.substring(0, 10)}</td></tr>`
+						tbody.append(tableString);
+					})
+				})
+	}
+</script>
+<style>
+	tbody > tr:hover {
+		cursor: pointer;
+	}
+</style>
 </body>
 </html>
