feat: add create and read

--- a/LimChaeSeung/GoHttpStudy/public/create_post.html
+++ b/LimChaeSeung/GoHttpStudy/public/create_post.html
@@ -33,7 +33,7 @@
 		<div class="d-flex justify-content-end">
 			<a href="home.html" class="btn btn-secondary">돌아가기</a>
 		</div>
-		<form action="localhost:8080/api/writePost" method="post">
+		<form action="http://localhost:8080/api/writePost" method="post">
 			<div class="form-floating mt-4">
 				<input type="text" class="form-control" id="title" placeholder="title" autocomplete="off" name="title">
 				<label for="title">제목</label>
